# extr

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
src/: main.rs  trust.rs
src/extractor/: arj.rs  bzip2.rs  cab.rs  compress.rs  gzip.rs  iso.rs  lha.rs  lzip.rs  lzma.rs  lzop.rs  mod.rs  pkg.rs  rar.rs  sevenz.rs  sfx.rs  tar.rs  xz.rs  zip.rs  zstd.rs
